# api

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
api/: app.py  config.py  database.py  dependencies.py  errors.py  main.py  pagination.py  security.py
api/api/: __init__.py
api/api/auth/: __init__.py  auth.py
api/api/common/: __init__.py  common.py
api/api/user/: __init__.py  user.py
api/domain/: __init__.py  auth.py  base.py  order_by.py  user.py  validators.py
api/middlewares/: __init__.py  exception.py
api/models/: user.py
api/repository/: base.py  repository.py  user.py
api/service/: service.py  user.py
api/use_case/: __init__.py  auth.py  use_case.py
deployments/: Dockerfile
deployments/local/: compose.yaml
deployments/local/env_files/: dev.env  test.env
migrations/: env.py
migrations/versions/: 2025_03_03_1811-2941b9716530_create_user_model.py
tests/: conftest.py
tests/factories/: __init__.py  factories.py  test_factories.py
tests/test_repository/: conftest.py
tests/test_repository/test_repository/: test_transcation.py
tests/test_repository/test_user/: test_delete.py  test_get.py  test_get_many.py  test_save.py
tests/test_service/: conftest.py
tests/test_service/test_user/: test_create.py  test_delete.py  test_get.py  test_get_many.py  test_update.py
